[package]
name = "keyboard-layouts"
version = "0.4.0"
authors = ["chris ricketts <chris.ricketts@steribar.com>", "Ella Pash"]
edition = "2021"
description = "Keyboard layout keymaps with an API to generate HID packets"
readme = "README.md"
keywords = ["keyboard", "layouts", "hid"]
exclude = [".gitignore"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ellabellla/keyboard-layouts"

[lib]
name = "keyboard_layouts"
path = "src/lib.rs"

[dependencies]
gen_layouts_sys = { path = "gen_layouts_sys", version = "0.3.0", features = [] }

